<resources>
    <string name="app_name">AccessAdmin</string>
    <string name="app_version">1.1</string>
    <string name="device_settings">Device Settings</string>
    <string name="admin_login_activity">Administrator Login</string>
    <string name="admin_password">Administrator Password</string>
    <string name="admin_password_activity">Admin Password</string>
    <string name="verify_admin_password">Verify the current administrator password:</string>
    <string name="update_admin_password">Enter new administrator password:</string>
    <string name="secure_admin_password">Password must contain letters and numbers, include upper and lower case, and be at least 8 characters long.</string>
    <string name="confirm_admin_password">Re-enter new administrator password to confirm:</string>
    <string name="sms_settings">SMS</string>
    <string name="app_settings">Application Settings</string>
    <string name="device_policy_settings">Device Policy Settings</string>
    <string name="alert_title_first_warning">WARNING !!!</string>
    <string name="alert_odk_body_first_warning">This will ERASE ALL patient data ever collected on this device. \n \n Are you sure?</string>
    <string name="alert_wipe_body_first_warning">This will ERASE ALL DATA on this device!! \n \n ALL patient data, all contacts, and all calendars will be erased, but data on the SD Card will remain. The device will then reset to factory settings and guide user to set up new password and provider ID.  \n \n Are you sure you want to do this? \n \n</string>
    <string name="alert_ok_button">ERASE ALL DATA</string>
    <string name="alert_first_cancel_button">Not sure, Keep Data</string>
    <string name="alert_title_second_warning">WARNING ! WARNING ! WARNING ! WARNING !</string>
    <string name="alert_odk_body_second_warning">Once erased, you CAN NEVER retreive this data! \n \n Are you absolutely sure you want to erase all patient data?</string>
    <string name="alert_wipe_body_second_warning">Once erased, you CAN NEVER retreive this data! \n \n Are you absolutely sure you want to reset device?</string>
    <string name="alert_second_cancel_button">Not Sure, Keep Data For Now</string>
    <string name="nothing_erased">Nothing has been erased, and no changes have been made to the device.</string>
    <string name="wiping_data">! Erasing Data Now !</string>
    <string name="admin_section">Administrator Controls</string>
    <string name="enable_admin">Enable Administration</string>
    <string name="wipe_patient_data">Erase All Patient Data</string>
    <string name="erase">Erase</string>
    <string name="wipe_data">Erase And Reset Device</string>
    <string name="user_section">User Requirements</string>
    <string name="pwd_quality_title">Password Type</string>
    <string name="pwd_length_title">Minimum Password Length</string>
    <string name="max_time_to_lock_title">Time Before Screen Lock</string>
    <string name="max_pwd_to_wipe_title">Password Errors Before Wipe</string>
    <string name="max_pwd_setting_first_warning">ALL DATA from this device will be wiped after %d incorrect password attempts. Are you sure?</string>
    <string name="max_pwd_setting_second_warning">A value below 10 may lead to accidental deletion of ALL DATA, for example, if a child is playing with the lockscreen.  \n \n Are you absolutely sure you want erase ALL DATA after %d incorrect password attempts?</string>
    <string name="max_pwd_setting_ok_button">Yes, Set at %d Errors</string>
    <string name="max_pwd_setting_cancel_button">Cancel</string>
    <string name="list_admin_password">Update Admin Password</string>
    <string name="list_admin_policy">Device Admin Policy</string>
    <string name="list_app_settings">Application Settings</string>
    <string name="list_sms_settings">SMS Admin Settings</string>
    <string name="list_short_password">Password</string>
    <string name="list_short_policy">Policy</string>
    <string name="list_short_apps">Apps</string>
    <string name="list_short_sms">SMS</string>
    <string name="change_password">Change Pin</string>
    <string name="device_admin">Device Administration</string>
    <string name="updating_data">Updating Data</string>
    <string name="please_wait">Please Wait &#8230;</string>
    <string name="default_pwd">***REMOVED***</string>
    <string name="btn_submit">Submit</string>
    <string name="access_forms">AccessForms</string>
    <string name="enable_log">Log Activities</string>
    <string name="access_forms_edit">Edit</string>
    <string name="access_mrs">AccessMRS</string>
    <string name="access_mrs_edit">Edit</string>
    <string name="adw_launcher">ADW Launcher</string>
    <string name="ushahidi">Ushahidi</string>
    <string name="adwEdit">Edit</string>
    <string name="view_settings">Show Menu in App</string>
    <string name="edit_settings">Preferences</string>
    <string name="android_settings">Android Settings</string>
    <string name="edit_android_settings">General Settings</string>
    <string name="settings_edit">Edit</string>
    <string name="adw_menu_enabled">adw_menu_enabled</string>
    <string name="ushahidi_menu_enabled">ushahidi_menu_enabled</string>
    <string name="access_forms_menu_enabled">access_forms_menu_enabled</string>
    <string name="access_mrs_menu_enabled">access_mrs_menu_enabled</string>
    <string name="access_mrs_log_enabled">access_mrs_log_enabled</string>
    <string name="show_menu_preference">show_settings_menu</string>
    <string name="enable_activity_log_preference">enable_activity_log</string>
    <string name="clock_service_start">Starting Clock Check</string>
    <string name="clock_service_ticker">Checking Date and Time</string>
    <string name="clock_service_label">Checking System Date and Time</string>
    <string name="clock_service_text">Updating System Clock against NTP internet Time</string>
    <string name="clock_needs_update">System Clock is out of date. Please Update in Settings, Date and Time</string>
    <string name="clock_updated_success">System Clock has been updated by NTP</string>
    <string name="message_gpsdisabled">GPS is disabled. Trying to use wireless network to determine your location.</string>
    <string name="message_locationunavailable">GPS and Network detection is disabled. Your current location is temporarily unavailable.</string>
    <string name="message_lastknownlocation">GPS and Network detection is disabled. Showing last known location.</string>
    <string name="app_policy_admin_name">Policy Admin Receiver</string>
    <string name="sms_example">Example</string>
    <string name="sms_code">Code</string>
    <string name="sms_admin_divider_title">SMS Device Administration</string>
    <string name="sms_admin_divider_description">This device may be managed by SMS. For security, SMS must include \' %s\' followed the unique device ID:</string>
    <string name="sms_reset_divider_title">SMS Device Reset</string>
    <string name="sms_reset_divider_description">If the Unique Device ID is lost, the ID may be reset by SMS. New codes will be sent to the number:</string>
    <string name="reset_sms_line">Reset SMS Line</string>
    <string name="reset_admin_id">Reset Unique ID</string>
    <string name="sms_title_lock">Lock Device</string>
    <string name="sms_description_lock">Lock the device with the existing password. Use in case of lost device when password is still secure.</string>
    <string name="sms_title_gps">Get Current Location</string>
    <string name="sms_description_gps">Retreive the current location of the device by GPS if possible, or through network tower coverage otherwise. SMS will report the Latitude, Longitude, Altitude, and Accuracy where available.</string>
    <string name="sms_title_send_sms">Reply to SMS</string>
    <string name="sms_description_send_sms">Generate a simple SMS reply to verify AccessAdmin is installed and running.</string>
    <string name="sms_title_verify_sim">Verify SIM card</string>
    <string name="sms_description_verify_sim">Verify that the SIM in this device is the original, and prompt alarm and lock device if not.</string>
    <string name="sms_title_hold_lock">Hold with Alarm</string>
    <string name="sms_description_hold_lock">Hold device with alarm and message that phone is locked and should be returned. This can only be reset with admin code -stop-hold.</string>
    <string name="sms_title_hold">Hold Device with Message</string>
    <string name="sms_description_hold">Interrupt and hold device with message. Any message following the code \'-hold:\' will be presented to the user on a screen that is difficult to exit without shutdown. This may be used, for example, to communicate to the user while remotely wiping data in the background.</string>
    <string name="sms_description_hold_example">Please Return Phone Immediately.</string>
    <string name="sms_title_stop_hold">Stop Holding the Device</string>
    <string name="sms_description_stop_hold">Cancel the current SMS \'-hold\' message. Remove the SMS message from view and allow user to interact with the device again.</string>
    <string name="sms_title_edit_access_mrs_pref">Edit AccessMRS Preferences</string>
    <string name="sms_description_edit_access_mrs_pref">Edit any AccessMRS preference by adding \'preference_name=value\' after a \'-accessmrs-pref:\' code. Use only lowercase and do not include spaces.
        \nPreferences include: 
        \n 
        \nText: server
        \nNumbers: saved_search, program, provider, maximum_refresh_time
        \nTrue/False: show_settings_menu, use_saved_searches, client_authentication</string>
    <string name="sms_description_edit_access_mrs_pref_example">server=https://server.org</string>
    <string name="sms_title_pwd_default">Reset Password to Default</string>
    <string name="sms_description_pwd_default">Lock device with a default password. Any message following the code \'-reset-pwd:\' will be used as the new device password if more than 5 characters. If \'-reset-pwd\' code is used without colon and text, password will be set to \'12345\'.  User will be requested to change the password on next unlock.</string>
    <string name="sms_description_pwd_default_example">:p@ssword123</string>
    <string name="sms_title_wipe_data">Factory Reset</string>
    <string name="sms_description_wipe_data">Performs a wipe of all Patient Data before conducting a full wipe of internal memory and factory reset. The device will reboot and guide user through the initial device setup instructions again.</string>
    <string name="sms_title_wipe_odk">Wipe All Patient Data</string>
    <string name="sms_description_wipe_odk">Performs a wipe of all Patient data.  This includes patient information from OpenMRS and all forms previously filled out on the device, but does not include SMS messages, notes, or calendar obligations that may still contain sensitive patient data.</string>
    <string name="sms_title_cancel_alarm">Cancel Device Admin Alarms</string>
    <string name="sms_description_cancel_alarm">Be default, all SMS codes sent to the device will repeat until they are complete. This message will cancel the current alarms.</string>
    <string name="sms_title_reset_admin">Reset Unique Device ID</string>
    <string name="view_policy_instruction">Pin Requirements:</string>
    <string name="view_password_quality">Characters:</string>
    <string name="view_password_length">Minimum Length:</string>
    <string name="view_password_lockout">Permanent Lock:</string>
    <string name="accessadmin_image">AccessAdmin Icon</string>
    <string name="return_info_message">PROPERTY of AMPATH. Please return to Community Health Services at Mosoriot Health Centre or call 0715050383.</string>
    <string name="icon">Small Icon</string>
    <string name="wrong_datetime">Wrong Date, Time</string>
    <string name="set_datetime">Please set current date and time to:</string>
</resources>