<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Admin Section -->

        <TextView
            android:id="@+id/admin_section"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:background="@color/medium_gray"
            android:paddingBottom="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/admin_section"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_large" />

        <RelativeLayout
            android:id="@+id/row2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" >

            <TextView
                android:id="@+id/enable_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/enable_admin"
                android:textSize="@dimen/text_size_medium" />

            <CheckBox
                android:id="@+id/enable_admin_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="13dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/row3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" >

            <TextView
                android:id="@+id/wipe_odk_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:text="@string/wipe_patient_data"
                android:textSize="@dimen/text_size_medium" />

            <Button
                android:id="@+id/wipe_odk_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:text="@string/erase" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/row4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" >

            <TextView
                android:id="@+id/wipe_data_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/wipe_data_button"
                android:text="@string/wipe_data"
                android:textSize="@dimen/text_size_medium" />

            <Button
                android:id="@+id/wipe_data_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/erase" />
        </RelativeLayout>

        <!-- User Password Section -->

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/white_color" />

        <TextView
            android:id="@+id/user_section"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/medium_gray"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/user_section"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/pwd_quality_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/pwd_quality_title"
            android:textSize="@dimen/text_size_medium" />

        <Spinner
            android:id="@+id/pwd_quality"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:drawSelectorOnTop="true"
            android:prompt="@string/pwd_quality_title" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/pwd_length_title"
            android:textSize="@dimen/text_size_medium" />

        <SeekBar
            android:id="@+id/seek_pwd_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/text_pwd_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="1dp"
            android:textColor="@color/holo_blue"
            android:textSize="@dimen/text_size_small"
            android:textStyle="italic" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/max_pwd_to_wipe_title"
            android:textSize="@dimen/text_size_medium" />

        <SeekBar
            android:id="@+id/seek_pwd_to_wipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/text_pwd_to_wipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="1dp"
            android:textColor="@color/holo_blue"
            android:textSize="@dimen/text_size_small"
            android:textStyle="italic" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/max_time_to_lock_title"
            android:textSize="@dimen/text_size_medium" />

        <SeekBar
            android:id="@+id/seek_time_to_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/text_time_to_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="35dp"
            android:textColor="@color/holo_blue"
            android:textSize="@dimen/text_size_small"
            android:textStyle="italic" />
    </LinearLayout>

</ScrollView>