<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@color/black" >

    <RelativeLayout
        android:id="@+id/title_section"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/title_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/priority" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/title_icon"
            android:paddingLeft="6dp"
            android:singleLine="true"
            android:text="@string/wrong_datetime"
            android:textColor="@color/white_color"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/title_section"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:background="@color/medium_gray" />

    <TextView
        android:id="@+id/message_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="7dp"
        android:text="@string/set_datetime"
        android:textColor="@color/white_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/message_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message_body"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:lines="3"
        android:textColor="@color/white_color"
        android:textSize="22sp" />

</RelativeLayout>