<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/error_red"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/accessadmin_image"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/center_image"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/white_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/center_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/icon" />

    <TextView
        android:id="@+id/submessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center_image"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:textColor="@color/white_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/additional_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <View
            android:id="@+id/dividing_line"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/additional_message"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white_color" />

        <TextView
            android:id="@+id/additional_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/return_info_message"
            android:textColor="@color/white_color"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>