<!--
  Copyright (C) 2011 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="30dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="30dp" >

            <ImageView
                android:id="@+id/icon"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="5dip"
                android:src="@drawable/icon" />

            <TextView
                android:id="@+id/policy_instructions"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon"
                android:paddingBottom="2dp"
                android:text="@string/view_policy_instruction"
                android:textColor="@color/white_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Password type -->

            <TextView
                android:id="@+id/view_password_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/policy_instructions"
                android:paddingBottom="2dp"
                android:text="@string/view_password_quality"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/policy_password_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/policy_instructions"
                android:layout_toRightOf="@+id/view_password_quality"
                android:paddingBottom="2dp"
                android:paddingLeft="6dp"
                android:textSize="14sp" />

            <!-- Minimum password length -->

            <TextView
                android:id="@+id/view_password_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/policy_password_quality"
                android:paddingBottom="2dp"
                android:text="@string/view_password_length"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/policy_password_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/policy_password_quality"
                android:layout_toRightOf="@+id/view_password_length"
                android:paddingBottom="2dp"
                android:paddingLeft="6dp"
                android:textSize="14sp" />

            <!-- password case -->

            <TextView
                android:id="@+id/view_password_lockout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/policy_password_length"
                android:paddingBottom="2dp"
                android:text="@string/view_password_lockout"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/policy_password_lockout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/policy_password_length"
                android:layout_toRightOf="@+id/view_password_lockout"
                android:paddingBottom="2dp"
                android:paddingLeft="6dp"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <ImageView
                android:id="@+id/exclamation"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:padding="5dip"
                android:src="@drawable/priority" />

            <TextView
                android:id="@+id/setup_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/exclamation"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/white_color"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/setup_action_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:minWidth="150dp"
                android:padding="6dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:minHeight="60dp"
                android:minWidth="150dp"
                android:padding="6dp"
                android:textSize="18sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>